# watson

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  watson-updater.key  watson-updater.key.pub
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/plans/: 2025-12-29-watson-implementation.md  2025-12-29-watson-launcher-design.md  2025-12-31-notes-and-file-search-design.md  2025-12-31-notes-file-search-implementation.md
scripts/: generate-icons.mjs  sync-versions.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  scratchpad.rs
src-tauri/src/actions/: mod.rs  system.rs
src-tauri/src/config/: mod.rs  settings.rs  tests.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/files/: indexer.rs  mod.rs
src-tauri/src/indexers/: macos.rs  mod.rs  tests.rs  windows.rs
src-tauri/src/notes/: mod.rs  storage.rs  tags.rs
src-tauri/src/search/: mod.rs  tests.rs
src/components/: NoteEditor.tsx  ResultItem.tsx  ResultsList.tsx  Scratchpad.tsx  SearchBar.tsx
src/stores/: app.ts
