[package]
name = "watson"
version = "1.2.6"
description = "A cross-platform productivity launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "watson_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
directories = "5.0"
fuzzy-matcher = "0.3"
urlencoding = "2.1"
open = "5.0"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
